Add remaining checkpoints

--- a/APPS.json
+++ b/APPS.json
@@ -1,8 +1,66 @@
 {
-  "Маштаково": [51.001546,51.677475],
-  "Исилькуль": [71.0164,54.9219],
+  "Маштаково": [
+    51.001546,
+    51.677475
+  ],
+  "Исилькуль": [
+    71.0164,
+    54.9219
+  ],
   "Бугристое": [
     61.626024,
     54.006540
+  ],
+  "Караозек": [
+    46.54579194278649,
+    48.63715669817191
+  ],
+  "Озинки": [
+    51.21617307599134,
+    49.88041252633748
+  ],
+  "Илек": [
+    51.49977022185685,
+    53.38756259794792
+  ],
+  "Орск": [
+    51.08380958614717,
+    58.47688316566669
+  ],
+  "Сагарчин": [
+    50.85784610311633,
+    56.141450250035405
+  ],
+  "Воскресенское": [
+    54.64640622647755,
+    65.80361212505922
+  ],
+  "Петухово": [
+    55.09120215400796,
+    68.2424346250778
+  ],
+  "Ольховка": [
+    53.7946747256543,
+    75.05184251886925
+  ],
+  "Карасукский": [
+    53.40191540795825,
+    77.70957889314013
+  ],
+  "Кулунда": [
+    52.53236300901796,
+    78.63025921333404
+  ],
+  "Веселоярск": [
+    51.21131494014978,
+    81.11324478586133
+  ],
+  "Михайловка": [
+    50.80778627952955,
+    81.96607753416934
+  ],
+  "Горняк": [
+    50.971923623594236,
+    81.42046322676323
   ]
 }
